--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,17 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.5</version>
+		<version>2.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.testedev</groupId>
-	<artifactId>apicrud</artifactId>
+	<groupId>br.com.testedev.apicrud</groupId>
+	<artifactId>apicrudt</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>apicrud</name>
-	<description>Demo project for Spring Boot</description>
+	<description> API</description>
 	<properties>
-		<java.version>16</java.version>
+		<java.version>11</java.version>
+		<springfox-version>2.7.0</springfox-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -22,40 +23,36 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-data-rest</artifactId>
-	</dependency>
-		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+		</dependency>
+		<dependency>
+   				 <groupId>mysql</groupId>
+    			<artifactId>mysql-connector-java</artifactId>
+   			 	<version>8.0.23</version>
+		</dependency>
+		<dependency>
+    			<groupId>io.springfox</groupId>
+    			<artifactId>springfox-swagger2</artifactId>
+    			<version>2.9.2</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.9.2</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.9.2</version>
+  			  <groupId>io.springfox</groupId>
+   			 <artifactId>springfox-swagger-ui</artifactId>
+   			 <version>2.9.2</version>
 		</dependency>
 	</dependencies>
 
